[package]
name = "simple-cache-rs"
version = "0.1.0"
authors = ["Calvin Brown <cab025@protonmail.com>"]
edition = "2018"
repository = "https://github.com/calvinbrown085/simple-cache-rs"
license = "Apache-2.0"
keywords = ["cache", "mem-cache"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
